Update 2.0 Data Conversion.ipynb

--- a/2.0 Data Conversion.ipynb
+++ b/2.0 Data Conversion.ipynb
@@ -10,7 +10,7 @@
     "test = 'test'\n",
     "\n",
     "eng = 'english'\n",
-    "ger = 'arabic'\n",
+    "ara = 'arabic'\n",
     "\n",
     "languages = [eng, ara]\n",
     "categories = [train, test]\n",
