--- a/1.0 Data Pre-Processing.ipynb
+++ b/1.0 Data Pre-Processing.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Lifecycle\n",
+    "©️ 2021, Mohamed Bani Hani and Ahmad Ibrahim. All Rights Reserved.\n",
+    "\n",
+    "------\n",
+    "## Case Study: SPOKEN-LANGUAGE-IDENTIFICATION\n",
+    "*Objective:*\n",
+    "Automatically identify the spoken language from a speech audio signal with TensorFlow.</font>\n",
+    "\n",
+    "## Dataset Description\n",
+    "The dataset used in the notebooks is based on Mozilla’s Common Voice. You will need to download the English and the Arabic datasets. Each data set contains an Audio file and five excel files. each excel contains information about the donors. (Age, Gender, accent, sentence, client_id)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +37,7 @@
     "original_dataset_paths[ara] = 'C:/Users/GTS/Desktop/EN &AR/cv-corpus-6.1-2020-12-11/ar/'\n",
     "\n",
     "target_root_path = 'C:/Users/GTS/Desktop/EN &AR/cv-corpus-6.1-2020-12-11/data/'\n",
-    "\n",
+    "# specify the number of audio files taken for each language \n",
     "num_files_to_take_for_each_language = 20000\n",
     "train_rate = 0.8 "
    ]
@@ -32,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this script will check if the dataset exists in the directory \n",
     "import os\n",
     "\n",
     "for lang in languages:\n",
@@ -59,29 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    " df = pd.read_csv(original_dataset_paths[eng] + 'validated.tsv', sep='\\t')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_filenames = df['path'].tolist()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# this function will taken  the audio that exist in the validation excel\n",
+    "# and checks the quality of the Audio and then save it on a new file \n",
     "\n",
     "def copy_audio_files_for_language(lang):\n",
     "    \n",
@@ -140,7 +140,6 @@
     }
    ],
    "source": [
-    "#took 6 hours\n",
     "warnings.simplefilter('ignore', UserWarning)\n",
     "\n",
     "copy_audio_files_for_language(ara)\n",
@@ -187,6 +186,7 @@
     }
    ],
    "source": [
+    "# this loop will make sure that the above function took 20K of data 16K for traning and 4K for testing \n",
     "for category in categories:\n",
     "    \n",
     "    if category == train:\n",
