Update 2.0 Data Convertion.ipynb

--- a/Colored scale pre-processing/2.0 Data Convertion.ipynb
+++ b/Colored scale pre-processing/2.0 Data Convertion.ipynb
@@ -23,7 +23,7 @@
     "import os\n",
     "#from pydub import AudioSegment\n",
     "\n",
-    "path = r\"C:\\Users\\HP\\Desktop\\testeng\"\n",
+    "path = r\"C:\\Users\\HP\\Desktop\\train\"\n",
     "\n",
     "#Change working directory\n",
     "os.chdir(path)\n",
